# zpdgen

./: Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  ctest.c  epszpd.f  gpdf.py  inmzpd.f  itgpy.py  weidpy.py
m4/: am-check-pymod.m4
quadp/: Makefile.in
